package org.example;

/**
 * Енам для состояний доставки заказа.
 */
public enum Condition {
    Accepted,
    Cooking,
    WaitingCourier,
    Delivering,
    Completed
}
