package org.example;

/**
 * Енам для моей пиццы.
 */
public enum Pizza {
    MARGHERITA,
    PEPPERONI,
    HAWAIIAN,
    VEGGIE,
    MEAT_LOVERS
}
