@startuml
skinparam classAttributeIconSize 0

package "org.example" {

    class Order {
        private final int orderNumber
        private final ArrayList<Pizza> pizzas
        private Condition condition
        --
        public Condition getCondition()
        public void setCondition(Condition condition)
    }

    class SimulateCreateOrder {
        private final Pizzeria pizzeria
        private final int countOrderForGenerate
        private final int maxCountPizzaInOrder
        --
        public void run()
    }

    package "building" {
        class Pizzeria {
            private final List<Thread> threads
            private final int endTime
            private final Queue<Order> orders
            private final String pathToConfig
            private final List<Runnable> workers
            public volatile boolean isOpen
            private volatile Warehouse warehouse
            --
            public synchronized void addOrder(Order order)
            public synchronized Order takeOrder()
            public void pizzeriaWork()
            private void start()
            private void stop()
        }

        class Warehouse {
            private final int capacity;
            private final Queue<Order> storage;
            private int countPizzas;
            --
            public void addOrder(Order order)
            public Order takeOrder(int capacity)
        }
    }

    package "workers" {
        class Baker {
            private final int id;
            private final int cookingSpeed;
            private final Warehouse warehouse;
            private final Pizzeria pizzeria;
            --
            public void run()
        }

        class Courier {
            private final int id;
            private final int speed;
            private final int capacity;
            private final Warehouse warehouse;
            private final Pizzeria pizzeria;
            --
            public void run()
        }
    }

    package "config" {
        class ConfigCreate {
            PizzeriaConfig createConfig(String path)
        }

        class PizzeriaConfig {
            private WarehouseConfig warehouse;
            private List<BakerConfig> bakers;
            private List<CourierConfig> couriers;
            --
            public WarehouseConfig getWarehouse()
            public List<BakerConfig> getBakers()
            public List<CourierConfig> getCouriers()
            --
            class BakerConfig
            class CourierConfig
            class WarehouseConfig
        }
    }

    package "enums" {
        enum Condition {
            Accepted,
            Cooking,
            WaitingCourier,
            Delivering,
            Completed
        }

        enum Pizza {
            MARGHERITA,
            PEPPERONI,
            HAWAIIAN,
            VEGGIE,
            MEAT_LOVERS
        }
    }
}

Pizzeria ..> Warehouse : "имеет 1 склад"
Pizzeria ..> Baker : "создаёт n пекарей"
Pizzeria ..> Courier : "    создаёт n курьеров"

Pizzeria --> "хранит заказы в очереди  " Order
Baker ..> Order : "  кладёт готовые заказы"
Courier ..> Order : "забирает со склада"

Order ..> Condition
Order ..> Pizza

SimulateCreateOrder ..> Pizzeria : " передает заказы в"

ConfigCreate ..> PizzeriaConfig : "создает"
Pizzeria "      настраивается через" ..> PizzeriaConfig

@enduml